AC_INIT(Makefile.am)
AM_INIT_AUTOMAKE(libcmdline, 0.1.0)
AC_PROG_CC
AC_PROG_CXX
AC_LANG(C++)
AC_PROG_LIBTOOL
AM_PROG_LIBTOOL
AC_PROG_INSTALL

lt_major=1
lt_revision=0
lt_age=0

AC_SUBST(lt_major)
AC_SUBST(lt_revision)
AC_SUBST(lt_age)

AC_OUTPUT( \
	Makefile \
	scripts/Makefile \
	src/Makefile \
	src/libcmdline/Makefile \
	src/test/Makefile
	)
